Fixed some code, added implementations in SymbolTableAST