@@ -1,5 +1,6 @@
 package compiler;
 
+import java.lang.reflect.Type;
 import java.util.*;
 import compiler.AST.*;
 import compiler.exc.*;
@@ -9,6 +10,7 @@ public class SymbolTableASTVisitor extends BaseASTVisitor<Void,VoidException> {
 
 	// TODO: Segnati questa cosa negli appunti
 	private List<Map<String, STentry>> symTable = new ArrayList<>();
+	private Map<String, Map<String, STentry>> classTable = new HashMap<>();
 	private int nestingLevel=0; // current nesting level
 	private int decOffset=-2; // counter for offset of local declarations at current nesting level 
 	int stErrors=0;
@@ -31,7 +33,7 @@ public class SymbolTableASTVisitor extends BaseASTVisitor<Void,VoidException> {
 		symTable.add(hm);
 	    for (Node dec : n.declist) visit(dec);
 		visit(n.exp);
-		symTable.remove(0);
+		symTable.removeFirst();
 		return null;
 	}
 
@@ -44,10 +46,14 @@ public class SymbolTableASTVisitor extends BaseASTVisitor<Void,VoidException> {
 	
 	@Override
 	public Void visitNode(FunNode n) {
-		if (print) printNode(n);
+		if (print) {
+			printNode(n);
+		}
 		Map<String, STentry> hm = symTable.get(nestingLevel);
 		List<TypeNode> parTypes = new ArrayList<>();  
-		for (ParNode par : n.parlist) parTypes.add(par.getType()); 
+		for (ParNode par : n.parlist) {
+			parTypes.add(par.getType());
+		}
 		STentry entry = new STentry(nestingLevel, new ArrowTypeNode(parTypes,n.retType),decOffset--);
 		//inserimento di ID nella symtable
 		if (hm.put(n.id, entry) != null) {
@@ -227,7 +233,134 @@ public class SymbolTableASTVisitor extends BaseASTVisitor<Void,VoidException> {
 
 	@Override
 	public Void visitNode(ClassNode classNode) {
-		if (print) printNode(classNode);
+		if (this.print) {
+			printNode(classNode);
+		}
+
+		// ---------- Symbol Table Class Insertion ----------
+		Map<String, STentry> map = this.symTable.get(this.nestingLevel);
+		ClassTypeNode classType = new ClassTypeNode(
+			new ArrayList<>(),
+			new ArrayList<>()
+		);
+		STentry classEntry = new STentry(
+			this.nestingLevel,
+			classType,
+			this.decOffset-- // TODO = Controlla la correttezza dell'offset
+		);
+
+		if (map.put(classNode.className, classEntry) != null) {
+			System.out.println(
+				"Class ID " + classNode.className +
+					" at line " + classNode.getLine() +
+					" already declared"
+			);
+			this.stErrors++;
+		}
+
+		// ---------- Class Table First Class Insertion ----------
+		Map<String, STentry> virtualTable = new HashMap<>();
+		this.classTable.put(classNode.className, virtualTable);
+
+		// ---------- Entering Class Declaration ----------
+		this.nestingLevel++;
+		this.symTable.add(virtualTable);
+		//TODO: Controlla anche qui gli offset
+		int prevOffset = decOffset;
+		int fieldOffset = -1;
+
+		// Retrieve the Fields and Method Types
+		for (FieldNode fieldNode : classNode.fieldList) {
+			STentry fieldEntry = new STentry(
+				this.nestingLevel,
+				fieldNode.getType(),
+				fieldOffset
+			);
+			virtualTable.put(fieldNode.name, fieldEntry);
+			classType.allFields.add(fieldNode.getType());
+			fieldOffset--;
+		}
+
+		for (MethodNode methodNode : classNode.methodList) {
+			// Visit the method  to add it to the ST, then add it to the virtual table
+			methodNode.accept(this);
+			STentry methodEntry = new STentry(
+				this.nestingLevel,
+				methodNode.getType(),
+				decOffset
+			);
+			classType.allMethods.add(methodNode.getType());
+		}
+		/*
+		 NOTA: Perché ho visitato i metodi dopo averli aggiunti tutti alla table?
+		 Perché se:
+		 class A {
+    	 int x;
+    	 int f() { return g(); }
+    	 int g() { return x; }
+		 }
+		 Quando analizzi f, g non è ancora nella Symbol Table
+		*/
+
+		// Reset of the System Table, Nesting Level and Offset
+    this.symTable.remove(nestingLevel);
+		this.nestingLevel--;
+		this.decOffset = prevOffset;
+		return null;
+	}
+
+	@Override
+	public Void visitNode(MethodNode methodNode) {
+		if (print) printNode(methodNode);
+
+		Map<String, STentry> currentScope = symTable.get(nestingLevel);
+
+		// 🔹 tipo funzionale
+		ArrowTypeNode methodType = new ArrowTypeNode(
+			methodNode.parlist.stream().map(ParNode::getType).toList(),
+			methodNode.retType
+		);
+
+		// 🔹 entry metodo
+		STentry entry = new STentry(
+			nestingLevel,
+			methodType,
+			decOffset++
+		);
+
+		currentScope.put(methodNode.id, entry);
+
+		// 🔥 SALVO OFFSET DENTRO IL NODO
+		methodNode.offset = entry.offset;
+
+		// 🔹 nuovo scope metodo
+		symTable.add(new HashMap<>());
+		nestingLevel++;
+
+		int prevOffset = decOffset;
+		int parOffset = 1;
+
+		// parametri
+		for (ParNode p : methodNode.parlist) {
+			symTable.get(nestingLevel).put(
+				p.id,
+				new STentry(nestingLevel, p.getType(), parOffset++)
+			);
+		}
+
+		// dichiarazioni locali
+		for (DecNode d : methodNode.declist) {
+			d.accept(this);
+		}
+
+		// corpo
+		methodNode.body.accept(this);
+
+		// uscita
+		symTable.remove(nestingLevel);
+		nestingLevel--;
+		decOffset = prevOffset;
+
 		return null;
 	}
 }
